welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:3: error: '=>' expected but integer literal found.
    case <20 && >12 => return true
          ^