welcome.lessons.welcome.bat.bool1.HasTeen.scala.code
def hasTeen(a:Int, b:Int, c:Int): Boolean = {
	a;b;c match {
    case <20 && >12 => return true
    case _ => return false}}
 